--- a/.github/workflows/publish_main_snapshot.yml
+++ b/.github/workflows/publish_main_snapshot.yml
@@ -10,9 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 8
-        uses: actions/setup-java@v1.3.0
+        uses: actions/setup-java@v2
         with:
           java-version: 8
+          distribution: temurin
       - name: Build with Gradle
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
