--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,8 +11,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v1.3.0
+        uses: actions/setup-java@v2
         with:
           java-version: 8
+          distribution: temurin
       - name: Build with Gradle
         run: ./gradlew build
