--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -9,12 +9,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up JDK 8
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
-          java-version: 8
-          distribution: temurin
+          distribution: 'temurin'
+          java-version: '8'
       - name: Build with Gradle
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
